--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,7 @@
         <input id = "search" type="text" placeholder="Search.."><button onclick = "search()" id="checkinput">Search</button>
         <hr>
         <ul class="row mb-3" id="stasiun"></ul>
+        <p>test</p>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
