--- a/index2.html
+++ b/index2.html
@@ -15,6 +15,7 @@
         <hr>
         <ul class="row mb-3" id="stasiun"></ul>
         <p>test</p>
+        <p>dan apabila</p>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
